fix: do not hide header buttons on narrow screen

--- a/src/demo/CistromeExplorer.scss
+++ b/src/demo/CistromeExplorer.scss
@@ -45,7 +45,6 @@
         background: #f5f5f5;
         height: 50px;
         width: 100%;
-        overflow-x: auto;
         z-index: 3;
         .header {
             color: black;
